<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_dialog_box"
    android:paddingStart="@dimen/paddingDefault"
    android:paddingTop="@dimen/paddingDefault"
    android:paddingEnd="@dimen/paddingDefault">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sortScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/sortControllerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sortMethodTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingDefault"
                android:text="@string/text_sort_method"
                android:textColor="@color/colorText"
                android:textSize="@dimen/textSize_mainTitle"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/sortMethodRadioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/sortMethodRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/paddingDefault"
                android:paddingEnd="@dimen/paddingDefault"
                android:paddingBottom="@dimen/paddingDefault"
                app:layout_constraintBottom_toTopOf="@id/sortOrderTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sortMethodTextView">

                <RadioButton
                    android:id="@+id/sortRadioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/paddingDefault"
                    android:text="@string/text_sort_method1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <RadioButton
                    android:id="@+id/sortRadioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/paddingDefault"
                    android:text="@string/text_sort_method2" />

                <RadioButton
                    android:id="@+id/sortRadioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/paddingDefault"
                    android:text="@string/text_sort_method3" />
            </RadioGroup>

            <TextView
                android:id="@+id/sortOrderTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingDefault"
                android:text="@string/text_sort_order"
                android:textColor="@color/colorText"
                android:textSize="@dimen/textSize_mainTitle"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/sortOrderRadioGroup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sortMethodRadioGroup" />

            <RadioGroup
                android:id="@+id/sortOrderRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/paddingDefault"
                android:paddingEnd="@dimen/paddingDefault"
                android:paddingBottom="@dimen/paddingDefault"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sortOrderTextView">

                <RadioButton
                    android:id="@+id/ascRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/paddingDefault"
                    android:text="@string/text_sort_order1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <RadioButton
                    android:id="@+id/descRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/paddingDefault"
                    android:text="@string/text_sort_order2" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/sortControllerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/paddingDefault"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortScrollView">

        <TextView
            android:id="@+id/sortCancelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/paddingDefault"
            android:text="@string/text_cancel"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSize_controller" />

        <TextView
            android:id="@+id/sortDoneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/paddingDefault"
            android:text="@string/text_done"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSize_controller" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>